--- a/src/pages/qr/index.astro
+++ b/src/pages/qr/index.astro
@@ -14,14 +14,12 @@ const description = `QR Code Page | Page for generating custom QR Codes with par
 >
   <div id="qr" class="scale-90"></div>
   <h2
-    class="flex flex-col justify-center items-center gap-1 font-cascadia-code
-      text-2xl text-white"
+    class="font-cascadia-code flex flex-col items-center justify-center gap-1 text-2xl text-white"
   >
     Are you unsure how it works?
     <a
       href="/qr/info"
-      class="bg-linear-to-r from-purple-default to-purple-blue font-space-grotesk
-        font-bold px-3 py-1 rounded"
+      class="from-purple-default to-purple-blue font-space-grotesk rounded bg-linear-to-r px-3 py-1 font-bold"
       >Click here</a
     >
   </h2>
