--- a/src/pages/routes.astro
+++ b/src/pages/routes.astro
@@ -21,7 +21,7 @@ const description = `Page Routes | Page listing all routes available on the webs
   bodyClass="justify-center items-center"
   description={description}
 >
-  <ul translate="no" class="text-2xl text-white font-space-grotesk">
+  <ul translate="no" class="font-space-grotesk text-2xl text-white">
     {
       routes.map((path) => (
         <li title={path}>
