--- a/src/ui/SwitchTheme.astro
+++ b/src/ui/SwitchTheme.astro
@@ -20,7 +20,7 @@ const finalClass =
     id="moon"
     title="Dark mode"
     aria-label="Dark mode"
-    class="absolute w-11/12 h-11/12"
+    class="absolute h-11/12 w-11/12"
     name="line-md:sunny-filled-loop-to-moon-filled-loop-transition"
   />
   <!-- Mode Light -->
@@ -28,7 +28,7 @@ const finalClass =
     id="sun"
     title="Light mode"
     aria-label="Light mode"
-    class="absolute w-11/12 h-11/12 hidden"
+    class="absolute hidden h-11/12 w-11/12"
     name="line-md:moon-filled-to-sunny-filled-loop-transition"
   />
 </button>
