--- a/src/ui/WhatsIcon.astro
+++ b/src/ui/WhatsIcon.astro
@@ -2,7 +2,9 @@
 interface Props {
   name?: string;
   class?: string;
+  /** Change the phone's color using **`fill-value`**. */
   phoneClass?: string;
+  /** Change the border color using **`stroke-value`**. */
   borderClass?: string;
 }
 
