--- a/src/ui/curriculum/Skills.astro
+++ b/src/ui/curriculum/Skills.astro
@@ -1,14 +1,27 @@
 ---
 import p from "../../constants/personal";
+import { titleClass } from "../../pages/curriculum.astro";
 ---
 
-<section class="flex flex-col border-t-2 border-gray-default pt-6">
-  <h1 class="text-3xl">Soft Skills</h1>
-  <div class="flex flex-col">
-    {p.skills.soft.map((skill) => <span>{skill}</span>)}
+<section class="grid grid-cols-2">
+  <h1 class={titleClass}>Soft Skills</h1>
+  <div class="order-1 flex flex-col gap-1 pt-1 pl-1 text-xl">
+    {
+      p.skills.soft.map((skill) => (
+        <span id={skill} class="font-medium">
+          {skill}
+        </span>
+      ))
+    }
   </div>
-  <h2 class="text-3xl">Hard Skills</h2>
-  <div class="flex flex-col">
-    {p.skills.hard.map((skill) => <span>{skill}</span>)}
+  <h2 class={titleClass}>Hard Skills</h2>
+  <div class="order-2 flex flex-col gap-1 pt-1 pl-1 text-xl">
+    {
+      p.skills.hard.map((skill) => (
+        <span id={skill} class="font-medium">
+          {skill}
+        </span>
+      ))
+    }
   </div>
 </section>
