--- a/src/ui/hero-section/CircularLogo.astro
+++ b/src/ui/hero-section/CircularLogo.astro
@@ -46,7 +46,7 @@ const circularTextFinalClass = cn(
     <text>
       <textPath
         href="#curve"
-        class="fill-gray-default dark:fill-white/80 select-none"
+        class="fill-gray-default select-none dark:fill-white/80"
       >
         {text}
       </textPath>
