--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,27 +4,30 @@ import GradientBg from "../ui/GradientBg.astro";
 import cn from "../utils";
 
 const aboutMeClass = cn(
-  `flex relative flex-col w-full h-fit min-h-screen justify-center items-center gap-4 p-8 
-    font-cascadia-code text-white`,
+  `font-cascadia-code relative flex h-fit min-h-screen w-full flex-col items-center justify-center gap-4 p-8 text-white`,
 );
 ---
 
 <section id="about-me" class={aboutMeClass}>
-  <GradientBg class="bg-linear-to-tr -z-10" />
-  <div class="flex flex-col max-w-8xl h-full justify-center items-center gap-8">
+  <GradientBg class="-z-10 bg-linear-to-tr">
+    <div
+      class="bg-grid mask-diagonal-fade absolute hidden h-full w-full bg-size-[2.7rem_2.7rem] bg-center"
+    >
+    </div>
+  </GradientBg>
+  <div class="max-w-8xl flex h-full flex-col items-center justify-center gap-8">
     <h2
       id="about"
-      class="text-4xl font-bold text-gray-default dark:text-white/80"
+      class="text-gray-default text-4xl font-bold dark:text-white/80"
     >
       About
       <span
         id="me"
-        class="bg-white/80 text-gray-default rounded p-0.5 -ml-3 hover:bg-transparent hover:text-gray-default
-          dark:hover:text-white/80 transition-colors ease-in-out duration-300"
+        class="text-gray-default hover:text-gray-default -ml-3 rounded bg-white/80 p-0.5 transition-colors duration-300 ease-in-out hover:bg-transparent dark:hover:text-white/80"
         >me</span
       >
     </h2>
-    <p class="max-w-7xl bg-gray-default text-xl text-justify p-4 rounded-md">
+    <p class="bg-gray-default max-w-7xl rounded-md p-4 text-justify text-xl">
       Hello!! My name is Fábio, I'm {calculateAge("2005-05-30")} years old, and I
       live in Manoel Ribas, Paraná - Brazil. I'm a very curious guy who enjoys learning
       how everything works. That's why I'm passionate about technology, which is a
