--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,6 +8,6 @@ const { class: className } = Astro.props;
   id="projects"
   class={`flex flex-col justify-center items-center h-fit min-h-screen w-full text-white ${className}`}
 >
-  <h1 class="text-4xl font-bold font-cascadia-code">Projects</h1>
+  <h1 class="font-cascadia-code text-4xl font-bold">Projects</h1>
   <Project />
 </section>
