--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -15,14 +15,13 @@ const description = `Page 404 | Route not found, return to the home page by clic
   description={description}
 >
   <h1
-    class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-5xl text-center text-white font-space-grotesk
-      tracking-wide leading-tight"
+    class="font-space-grotesk fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-5xl leading-tight tracking-wide text-white"
   >
     Page not found | 404, <br />return to the home
     <UnderlineButton
       href="/"
       variant="primary"
-      class="h-0.8 text-purple-blue hover:text-white after:bg-purple-blue/60 text-5xl transition-colors ease-in-out duration-300"
+      class="h-0.8 text-purple-blue after:bg-purple-blue/60 text-5xl transition-colors duration-300 ease-in-out hover:text-white"
       >page</UnderlineButton
     >
   </h1>
