--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -13,10 +13,10 @@ const description = `Page 500 | Internal server error, please try again later or
 
 <Layout header footer title=`500 | ${p.name}` description={description}>
   <h1
-    class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-white text-3xl font-space-grotesk"
+    class="font-space-grotesk fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-3xl text-white"
   >
     Internal server error: <span
-      class="bg-clip-text text-transparent font-bold bg-linear-to-r from-red-500 to-red-800"
+      class="bg-linear-to-r from-red-500 to-red-800 bg-clip-text font-bold text-transparent"
       >{error instanceof Error ? error.message : error || "Unknown error"}</span
     >
   </h1>
