--- a/src/pages/admin/ia.astro
+++ b/src/pages/admin/ia.astro
@@ -2,26 +2,29 @@
 export const prerender = false;
 import Layout from "../../layouts/Layout.astro";
 import p from "../../constants/personal";
+import { Icon } from "astro-icon/components";
 ---
 
 <Layout title=`IA | ${p.name}` bodyClass="justify-center p-8">
-  <h1 class="text-2xl text-black dark:text-white font-bold mb-4">
-    Chat IA Astro
+  <h1 class="mb-4 text-2xl font-bold text-black dark:text-white">
+    Eu sou Groot
   </h1>
 
   <div
     id="chat"
-    class="w-full max-w-md h-[60vh] overflow-y-auto border rounded p-2 mb-4 bg-gray-800"
+    class="bg-gray-default mb-4 h-[70dvh] w-full max-w-7xl overflow-y-auto rounded border p-2"
   >
   </div>
 
-  <form id="form" class="w-full max-w-md flex">
+  <form id="form" class="flex w-full max-w-7xl items-center justify-center">
     <input
       id="input"
-      class="flex-1 p-2 rounded-l bg-gray-700 text-white"
+      class="flex-1 rounded-l bg-gray-700 p-2 text-white"
       placeholder="Digite sua mensagem"
     />
-    <button class="bg-blue-600 p-2 rounded-r">Enviar</button>
+    <Icon name="akar-icons:attach" class="size-7.5 rotate-35 text-white" />
+    <Icon name="mdi:microphone" class="size-8 text-white" />
+    <button class="rounded-r bg-blue-600 p-2">Enviar</button>
   </form>
 
   <script is:inline>
