--- a/src/pages/qr/info.astro
+++ b/src/pages/qr/info.astro
@@ -17,7 +17,7 @@ const description = `Page QR Info | Information page about the QR Code generator
   bodyClass="flex-row max-w-8xl h-fit place-self-center justify-center items-center gap-x-4"
   description={description}
 >
-  <section class="flex flex-col text-white gap-4">
+  <section class="flex flex-col gap-4 text-white">
     <h1 class="text-3xl font-bold">Gerador de QR Code</h1>
     <HowWorksQrCode />
     <ExampleQrCode />
@@ -25,11 +25,10 @@ const description = `Page QR Info | Information page about the QR Code generator
     <AboutQrCode />
   </section>
   <section
-    class="min-w-xl bg-gray-900 border border-gray-700 rounded-lg p-5 overflow-x-auto
-      hover:border-purple-blue/80 transition-colors ease-in-out duration-200"
+    class="hover:border-purple-blue/80 min-w-xl overflow-x-auto rounded-lg border border-gray-700 bg-gray-900 p-5 transition-colors duration-200 ease-in-out"
   >
     <h2
-      class="flex text-white text-xl font-semibold justify-center items-center gap-2 mb-4"
+      class="mb-4 flex items-center justify-center gap-2 text-xl font-semibold text-white"
     >
       <Icon name="icon-park-outline:setting-config" /> Parâmetros disponíveis
     </h2>
