--- a/src/styles/keyframes.css
+++ b/src/styles/keyframes.css
@@ -76,11 +76,11 @@
 
 @keyframes draw-fill {
   from {
-    fill-opacity: 0;
+    clip-path: inset(0 100% 0 0);
   }
 
   to {
-    fill-opacity: 1;
+    clip-path: inset(0 0 0 0);
   }
 }
 
@@ -158,7 +158,6 @@
 }
 
 @keyframes blink {
-
   0%,
   100% {
     opacity: 0.25;
