--- a/src/ui/Modal.astro
+++ b/src/ui/Modal.astro
@@ -1,12 +1,10 @@
 ---
-export const prerender = false;
 import { Icon } from "astro-icon/components";
-import cn, { removeSpaces } from "../utils";
+import { removeSpaces } from "../utils";
 import SwitchLang from "./SwitchLang.astro";
 
 interface Props extends astroHTML.JSX.HTMLAttributes {
   id?: string;
-  open?: boolean;
   message?: string;
   btnLabel?: string;
   switchLang?: boolean;
@@ -21,7 +19,6 @@ message = removeSpaces(
 );
 
 const {
-  open = false,
   switchLang = true,
   id = "first-modal",
   btnLabel = "Okay, continue",
@@ -33,20 +30,20 @@ const {
 <div
   id={id}
   role="dialog"
-  aria-modal="true"
-  aria-hidden={`${!open ? "true" : "false"}`}
+  aria-modal={false}
+  aria-hidden={true}
   data-modal-backdrop
   aria-label={ariaLabel}
-  class={`fixed inset-0 ${!open ? "hidden" : "flex"} items-center justify-center bg-black/50 z-50 p-4`}
+  class="fixed inset-0 z-50 hidden items-center justify-center bg-black/50 p-4"
 >
   <div
-    class="bg-white dark:bg-gray-default rounded-lg shadow-xl max-w-2xl w-full p-5 relative"
+    class="dark:bg-gray-default relative w-full max-w-2xl rounded-lg bg-white p-5 shadow-xl"
   >
-    <div class="absolute flex justify-center items-center gap-2 top-2 right-2">
+    <div class="absolute top-2 right-2 flex items-center justify-center gap-2">
       {
         switchLang && (
           <SwitchLang
-            class="size-6 min-w-6 min-h-6"
+            class="size-6 min-h-6 min-w-6"
             iconClass="text-gray-500 hover:text-purple-blue dark:hover:text-gray-300"
           />
         )
@@ -56,23 +53,22 @@ const {
         title="Close modal"
         aria-label="Close modal"
         name="line-md:menu-to-close-transition"
-        class={cn(`size-6 text-gray-500 hover:text-purple-blue dark:hover:text-gray-300 cursor-pointer 
+        class={removeSpaces(`size-6 text-gray-500 hover:text-purple-blue dark:hover:text-gray-300 cursor-pointer 
           transition-colors ease-in-out duration-200`)}
       />
     </div>
-    <h2 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">
+    <h2 class="mb-2 text-xl font-semibold text-gray-900 dark:text-white">
       {title}
     </h2>
 
-    <p class="text-gray-700 dark:text-gray-300 leading-relaxed mb-4">
+    <p class="mb-4 leading-relaxed text-gray-700 dark:text-gray-300">
       {message}
     </p>
 
     <div class="flex justify-end gap-3">
       <button
         data-modal-ok
-        class="bg-purple-600 hover:bg-purple-700 dark:bg-purple-700 dark:hover:bg-purple-600 text-white
-          px-4 py-2 rounded-md font-medium cursor-pointer transition-colors ease-in-out duration-200"
+        class="cursor-pointer rounded-md bg-purple-600 px-4 py-2 font-medium text-white transition-colors duration-200 ease-in-out hover:bg-purple-700 dark:bg-purple-700 dark:hover:bg-purple-600"
       >
         {btnLabel}
       </button>
