--- a/src/ui/Technologies.astro
+++ b/src/ui/Technologies.astro
@@ -26,14 +26,11 @@ const finalClass = cn(baseClass, className);
     <div class={finalClass}>
       <div
         translate="no"
-        class="flex w-max justify-center items-center gap-10 will-change-transform animate-horz-loop group-hover:pause"
+        class="animate-horz-loop group-hover:pause flex w-max items-center justify-center gap-10 will-change-transform"
       >
         {duplicateTechnologies.map((tech) => {
           return (
-            <span
-              class="flex justify-center items-center gap-2 text-gray-default dark:text-white text-center text-3xl text-nowrap 
-                font-cascadia-code font-bold"
-            >
+            <span class="text-gray-default font-cascadia-code flex items-center justify-center gap-2 text-center text-3xl font-bold text-nowrap dark:text-white">
               {tech.name}
               {tech.customIcon ? (
                 <Image
