--- a/src/ui/curriculum/Education.astro
+++ b/src/ui/curriculum/Education.astro
@@ -1,3 +1,22 @@
-<section class="border-t-2 border-gray-default pt-6">
-  <h1 class="text-3xl">Formação Acadêmica</h1>
+---
+import p from "../../constants/personal";
+import { titleClass } from "../../pages/curriculum.astro";
+---
+
+<section class="border-t-2 border-white/80 py-8">
+  <h1 class={titleClass}>Formação Acadêmica</h1>
+  <div class="flex flex-col">
+    {
+      p.education.map((education) => (
+        <div class="mt-4 flex items-start gap-4">
+          <h2 class="w-1/4 text-xl font-medium">{education.date}</h2>
+          <div class="flex-1 text-end text-2xl">
+            <strong>{education.name}</strong> -{" "}
+            <span class="text-white/50">{education.institution}</span>
+            <p>Status: {education.status}</p>
+          </div>
+        </div>
+      ))
+    }
+  </div>
 </section>
