--- a/src/ui/curriculum/Experience.astro
+++ b/src/ui/curriculum/Experience.astro
@@ -1,7 +1,24 @@
 ---
 import p from "../../constants/personal";
+import { titleClass } from "../../pages/curriculum.astro";
 ---
 
-<section class="flex flex-col gap-8 border-t-2 border-gray-default pt-6">
-  <h1 class="text-3xl">Resumo Profissional</h1>{p.professionalSummary}
+<section class="flex flex-col gap-4">
+  <h1 class={titleClass}>Resumo Profissional</h1>
+  <div class="text-xl">
+    {p.professionalSummary}
+  </div>
+  <h1 class={titleClass}>Histórico Profissional</h1>
+  <div class="text-xl">
+    {
+      p.professionalHistory.map((history) => {
+        return (
+          <div class="my-8 flex justify-between">
+            <h2 class="text-nowrap">{history.date}</h2>
+            <div class="max-w-3xl">{history.summary}</div>
+          </div>
+        );
+      })
+    }
+  </div>
 </section>
