--- a/src/ui/header/ChristmasLights.astro
+++ b/src/ui/header/ChristmasLights.astro
@@ -21,7 +21,7 @@ const lightFinalClass = cn(lightBaseClass, lightClass);
 ---
 
 <div
-  class="absolute -bottom-4 left-0 w-full flex justify-between gap-2 pointer-events-none -z-5 px-2"
+  class="pointer-events-none absolute -bottom-4 left-0 -z-5 flex w-full justify-between gap-2 px-2"
 >
   {
     lights.map((_, i) => {
