--- a/src/ui/header/Menu.astro
+++ b/src/ui/header/Menu.astro
@@ -12,18 +12,18 @@ const ulClass = cn(
   <button
     id="menu"
     role="button"
-    class="group flex relative md:hidden flex-col w-8 h-6 justify-between items-center p-0.5 cursor-pointer"
+    class="group relative flex h-6 w-8 cursor-pointer flex-col items-center justify-between p-0.5 md:hidden"
   >
     <div
-      class="bg-linear-to-r from-purple-default to-purple-blue self-end w-9/12 h-0.9 min-h-0.9 rounded-full group-hover:w-full transition-[width] ease-in-out duration-300"
+      class="from-purple-default to-purple-blue h-0.9 min-h-0.9 w-9/12 self-end rounded-full bg-linear-to-r transition-[width] duration-300 ease-in-out group-hover:w-full"
     >
     </div>
     <div
-      class="bg-linear-to-r from-purple-default to-purple-blue w-full h-0.9 min-h-0.9 rounded-full self-end group-hover:w-9/12 transition-[width] ease-in-out duration-300"
+      class="from-purple-default to-purple-blue h-0.9 min-h-0.9 w-full self-end rounded-full bg-linear-to-r transition-[width] duration-300 ease-in-out group-hover:w-9/12"
     >
     </div>
     <div
-      class="bg-linear-to-r from-purple-default to-purple-blue w-full h-0.9 min-h-0.9 rounded-full"
+      class="from-purple-default to-purple-blue h-0.9 min-h-0.9 w-full rounded-full bg-linear-to-r"
     >
     </div>
   </button>
