--- a/src/ui/hero-section/AsciiArts.astro
+++ b/src/ui/hero-section/AsciiArts.astro
@@ -22,7 +22,7 @@ const nameArray = [
   ",",
 ];
 const baseClass = removeSpaces(
-  `flex flex-col text-3xl lg:text-4xl text-left font-space-grotesk font-black justify-center items-start gap-2`,
+  `flex flex-col text-3xl lg:text-4xl text-left font-space-grotesk font-black justify-center items-center md:items-start gap-2`,
 );
 const divClass = removeSpaces(
   `flex relative min-w-59ch bg-gradient-to-br bg-clip-text text-transparent from-blue-800 to-rose-600 contrast-125 
@@ -38,14 +38,14 @@ const { class: className } = Astro.props as Props;
     id="hello-world"
     class="inline text-nowrap text-gray-800 dark:text-white/80"
   >
-    <span class="inline-block opacity-0 animate-char"> I'm </span>
+    <span class="animate-char inline-block opacity-0"> I'm </span>
     <br class="md:hidden" />
     {
       nameArray.map((letter, i) => (
         <span
           translate="no"
           style={`animation-delay: ${i * 0.08}s;`}
-          class="inline-block opacity-0 animate-char"
+          class="animate-char inline-block opacity-0"
         >
           {letter}
         </span>
@@ -54,14 +54,14 @@ const { class: className } = Astro.props as Props;
     <span
       lang="en"
       id="keywords"
-      class="inline-block animate-blur transition-all duration-500 ease-in-out"
+      class="animate-blur inline-block transition-all duration-500 ease-in-out"
     ></span>
   </p>
   <div translate="no" class={divClass}>
     <pre id="ascii-art">{fabio}</pre>
     <pre
       id="bar"
-      class="hidden md:block animate-opacity transition-opacity duration-500 ease-in-out">{bar.ascii}</pre>
+      class="animate-opacity hidden transition-opacity duration-500 ease-in-out md:block">{bar.ascii}</pre>
   </div>
 </h1>
 
