--- a/src/ui/qr/ExampleQrCode.astro
+++ b/src/ui/qr/ExampleQrCode.astro
@@ -3,12 +3,12 @@ import { Icon } from "astro-icon/components";
 ---
 
 <div
-  class="bg-gray-900 border border-gray-700 rounded-lg p-2 hover:border-purple-blue/80 transition-colors ease-in-out duration-200"
+  class="hover:border-purple-blue/80 rounded-lg border border-gray-700 bg-gray-900 p-2 transition-colors duration-200 ease-in-out"
 >
-  <h2 class="flex items-center font-space-grotesk font-bold italic text-xl">
-    <Icon name="line-md:link" class="text-slate-400 mr-2" /> Exemplo de uso
+  <h2 class="font-space-grotesk flex items-center text-xl font-bold italic">
+    <Icon name="line-md:link" class="mr-2 text-slate-400" /> Exemplo de uso
   </h2>
-  <div class="bg-gray-800 text-green-300 px-3 py-2 mt-1 rounded">
+  <div class="mt-1 rounded bg-gray-800 px-3 py-2 text-green-300">
     http://localhost:4321/qr?data=https://openai.com&size=300&shape=rounded&download=png&name=meu-qr
   </div>
 </div>
