--- a/src/ui/qr/HowWorksQrCode.astro
+++ b/src/ui/qr/HowWorksQrCode.astro
@@ -3,12 +3,12 @@ import { Icon } from "astro-icon/components";
 ---
 
 <div
-  class="bg-gray-900 border border-gray-700 rounded-lg p-2 hover:border-purple-blue/80 transition-colors ease-in-out duration-200"
+  class="hover:border-purple-blue/80 rounded-lg border border-gray-700 bg-gray-900 p-2 transition-colors duration-200 ease-in-out"
 >
-  <h2 class="flex items-center font-space-grotesk font-bold italic text-xl">
-    <Icon name="typcn:info" class="text-yellow-400 mr-2" /> Como funciona
+  <h2 class="font-space-grotesk flex items-center text-xl font-bold italic">
+    <Icon name="typcn:info" class="mr-2 text-yellow-400" /> Como funciona
   </h2>
-  <p class="text-gray-300 text-lg mt-1">
+  <p class="mt-1 text-lg text-gray-300">
     Gere QR Codes personalizados com base em parâmetros fornecidos via URL. Você
     pode definir dados, cores, formas e até baixar o resultado automaticamente.
   </p>
