--- a/src/ui/qr/QrInfoTable.astro
+++ b/src/ui/qr/QrInfoTable.astro
@@ -1,5 +1,5 @@
-<table class="min-w-full max-w-4xl text-sm text-left text-gray-300">
-  <thead class="bg-gray-800 text-xs uppercase text-gray-400">
+<table class="max-w-4xl min-w-full text-left text-sm text-gray-300">
+  <thead class="bg-gray-800 text-xs text-gray-400 uppercase">
     <tr>
       <th class="px-4 py-2">Parâmetro</th>
       <th class="px-4 py-2">Tipo</th>
