--- a/src/ui/qr/ResultQrCode.astro
+++ b/src/ui/qr/ResultQrCode.astro
@@ -3,14 +3,14 @@ import { Icon } from "astro-icon/components";
 ---
 
 <div
-  class="bg-gray-900 border border-gray-700 rounded-lg p-2 hover:border-purple-blue/80 transition-colors ease-in-out duration-200"
+  class="hover:border-purple-blue/80 rounded-lg border border-gray-700 bg-gray-900 p-2 transition-colors duration-200 ease-in-out"
 >
-  <h2 class="flex items-center font-space-grotesk font-bold italic text-xl">
+  <h2 class="font-space-grotesk flex items-center text-xl font-bold italic">
     <Icon name="fluent-emoji-flat:inbox-tray" class="mr-2" /> Resultado
   </h2>
-  <p class="text-gray-300 text-lg mt-1">
+  <p class="mt-1 text-lg text-gray-300">
     O QR Code será gerado com os parâmetros definidos e o arquivo <code
-      class="bg-gray-800 text-white px-1 rounded">meu-qr.png</code
+      class="rounded bg-gray-800 px-1 text-white">meu-qr.png</code
     >
     será baixado automaticamente.
   </p>
